kmymoney/dialogs/knewaccountdlg.h
@@ -136,6 +136,7 @@ public:
 protected:
   void displayOnlineBankingStatus();
   void adjustEditWidgets(kMyMoneyEdit* dst, kMyMoneyEdit* src, char mode, int corr);
+  void handleOpeningBalanceCheckbox(const QString &currencyId);
 
 protected slots:
   void okClicked();
@@ -150,6 +151,7 @@ protected slots:
   void slotAdjustMinBalanceEarlyEdit(const QString&);
   void slotAdjustMaxCreditAbsoluteEdit(const QString&);
   void slotAdjustMaxCreditEarlyEdit(const QString&);
+  void slotCheckCurrency();
 };
 
 #endif
